--- a/GS40TF/Debug/Makefile
+++ b/GS40TF/Debug/Makefile
@@ -41,8 +41,10 @@ SUBDIRS :=  \
 # Add inputs and outputs from these tool invocations to the build variables 
 C_SRCS +=  \
 ../handler.c \
+../instruction_set/eeprom.c \
 ../instruction_set/instruction_set.c \
 ../main.c \
+../scheduler.c \
 ../serial/serial_ble.c \
 ../serial/serial_mcu.c \
 ../touch_panel/touch_panel.c
@@ -56,32 +58,40 @@ ASM_SRCS +=
 
 OBJS +=  \
 handler.o \
+instruction_set/eeprom.o \
 instruction_set/instruction_set.o \
 main.o \
+scheduler.o \
 serial/serial_ble.o \
 serial/serial_mcu.o \
 touch_panel/touch_panel.o
 
 OBJS_AS_ARGS +=  \
 handler.o \
+instruction_set/eeprom.o \
 instruction_set/instruction_set.o \
 main.o \
+scheduler.o \
 serial/serial_ble.o \
 serial/serial_mcu.o \
 touch_panel/touch_panel.o
 
 C_DEPS +=  \
 handler.d \
+instruction_set/eeprom.d \
 instruction_set/instruction_set.d \
 main.d \
+scheduler.d \
 serial/serial_ble.d \
 serial/serial_mcu.d \
 touch_panel/touch_panel.d
 
 C_DEPS_AS_ARGS +=  \
 handler.d \
+instruction_set/eeprom.d \
 instruction_set/instruction_set.d \
 main.d \
+scheduler.d \
 serial/serial_ble.d \
 serial/serial_mcu.d \
 touch_panel/touch_panel.d
@@ -107,6 +117,13 @@ LINKER_SCRIPT_DEP+=
 	@echo Finished building: $<
 	
 
+instruction_set/eeprom.o: ../instruction_set/eeprom.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\XMEGAA_DFP\1.1.68\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atxmega128a1u -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\XMEGAA_DFP\1.1.68\gcc\dev\atxmega128a1u" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
 instruction_set/instruction_set.o: ../instruction_set/instruction_set.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
@@ -115,6 +132,13 @@ instruction_set/instruction_set.o: ../instruction_set/instruction_set.c
 	
 
 ./main.o: .././main.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\XMEGAA_DFP\1.1.68\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atxmega128a1u -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\XMEGAA_DFP\1.1.68\gcc\dev\atxmega128a1u" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./scheduler.o: .././scheduler.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\XMEGAA_DFP\1.1.68\include"  -O1 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atxmega128a1u -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\XMEGAA_DFP\1.1.68\gcc\dev\atxmega128a1u" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
